requestPermission callback not invoked if the WebProcess doesn't have to ask the UI Process about the permission level. https://bugs.webkit.org/show_bug.cgi?id=79494

Reviewed by Jon Honeycutt.

Invoke the callback in the case where the permission level is known and no message is sent
to the UI Process.

* WebProcess/Notifications/NotificationPermissionRequestManager.cpp:
(WebKit::NotificationPermissionRequestManager::startRequest):

Canonical link: https://commits.webkit.org/96597@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108822 268f45cc-cd09-0410-ab3c-d52691b4dbfc